...
    
    var body: some View {
        VStack {
            TabView {
                WorkoutView()
                    .tabItem{
                        Label("Workout",systemImage:"dumbbell")
                            .padding()
                    }
                CalendarView()
                    .tabItem {
                        Label("Calendar",systemImage: "calendar")
                            .padding()
...
